--- a/assents/css/style.css
+++ b/assents/css/style.css
@@ -36,7 +36,7 @@ body {
     align-items: center;
     width: 60px;
     gap: 18px;
-
+    cursor: pointer;
 }
 
 .poke {
@@ -95,6 +95,7 @@ body {
     position: absolute;
     top: 460px;
     left: 195px;
+    
 
 }
 
@@ -116,12 +117,18 @@ body {
     height: 50px;
     border: none;
     border-radius: 20px;
+    cursor: pointer;
     color: var(--writ);
     font-size: 36px;
     background-color: var(--blue);
     bottom: 150px;
     left: 1000px;
+    transition: all, 3s  ;
     
+}
+.down:hover{
+    background-color: var(--yell);
+    color: var(--blue);
 }
 /*main the and*/
 
