--- a/assents/css/style.css
+++ b/assents/css/style.css
@@ -95,7 +95,7 @@ body {
     position: absolute;
     top: 460px;
     left: 195px;
-    
+
 
 }
 
@@ -123,13 +123,15 @@ body {
     background-color: var(--blue);
     bottom: 150px;
     left: 1000px;
-    transition: all, 3s  ;
-    
+    transition: all, 3s;
+
 }
-.down:hover{
-    background-color: var(--yell);
+
+.down:hover {
+    background-color: var(--writ);
     color: var(--blue);
 }
+
 /*main the and*/
 
 
@@ -140,4 +142,78 @@ footer {
     color: var(--yell);
     font-size: 500;
 }
+
 /*footer the and*/
+
+@media screen and (max-width:768px) {
+
+    .container-header img {
+        display: flex;
+        align-items: center;
+        width: 30px;
+        gap: 18px;
+        cursor: pointer;
+    }
+
+    .manin-container h1 {
+        display: flex;
+        align-items: center;
+        color: var(--yell);
+        justify-content: center;
+        font-size: 60px;
+        position: absolute;
+
+    }
+
+    .manin-container h2 {
+        color: var(--writ);
+        font-size: 40px;
+        top: 380px;
+        position: absolute;
+    }
+
+    .manin-container h3 {
+        display: flex;
+        align-items: center;
+        color: var(--blue);
+        align-items: center;
+        font-size: 15px;
+        position: absolute;
+        top: 560px;
+        left: 98px;
+    }
+
+    .text {
+        display: flex;
+        position: relative;
+        color: var(--blue);
+        width: 220px;
+        height: 130px;
+        top: 220px;
+        left: -1px;
+    }
+
+    .manin-container img {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        width: 400px;
+        height: 450px;
+        bottom: 150px;
+        transform: scaleX(-1);
+
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: var(--yell);
+        font-size: 300;
+        width: 250px;
+
+    }
+}
