--- a/assents/css/style.css
+++ b/assents/css/style.css
@@ -85,6 +85,26 @@ body {
     height: 680px;
     bottom: 20px;
     transform: scaleX(-1);
+    transition: all, .5s;
+    animation: float 5s ease-in-out infinite;
+
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(0px);
+        
+    }
+
+    50% {
+        transform: translateY(-30px);
+        
+    }
+
+    100% {
+        transform: translateY(0px);
+        
+    }
 }
 
 .manin-container h3 {
@@ -153,7 +173,9 @@ footer {
         width: 30px;
         gap: 18px;
         cursor: pointer;
+
     }
+
 
     .manin-container h1 {
         display: flex;
